Fix for weird formatting overlaps
If you were exactly at the crossover point between Desktop and Tablet, or Tablet and Mobile, you got some weird half-and-half formatting. No more!

--- a/mystyle.css
+++ b/mystyle.css
@@ -528,7 +528,7 @@
 /****************************/
 
 /*Tablet Formatting*/
-@media (max-width: 875px) and (min-width: 609px) {
+@media (max-width: 874px) and (min-width: 610px) {
 	body {
 	  background-color:#000000;
 	  font-family: SourceSansPro;
